<resources>
    <string name="app_name">Points Captor</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="second_1">1s</string>
    <string name="seconds_2">2s</string>
    <string name="seconds_5">5s</string>
    <string name="seconds_10">10s</string>
    <string name="seconds_15">15s</string>
    <string name="seconds_20">20s</string>
    <string name="meter_1">1m</string>
    <string name="meters_2">2m</string>
    <string name="meters_5">5m</string>
    <string name="meters_10">10m</string>
    <string name="meters_15">15m</string>
    <string name="meters_20">20m</string>
    <string name="other_distance">OTHER DISTANCE</string>
    <string name="other_time">OTHER TIME</string>
    <string name="by_distance">By distance</string>
    <string name="by_time">By time</string>
    <string name="gps">GPS</string>
    <string name="captured_points">&#160;captured points</string>
    <string name="zero">0</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="location"></string>
    <string name="maps">Maps</string>
    <string name="info">Information</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="view_captured_points">View captured points</string>
    <string name="view_in_google_maps">View in Google Maps</string>
    <string name="store_in_memory">Store in memory</string>
    <string name="share_with_someone">Share captured points</string>
    <string name="start_new_capture">Start a new capture</string>
    <string name="choose_action">Choose an action:&#160;</string>
    <string name="discard_confirmation">Are you sure? All unsaved data will be discarded.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_message">
        Points Captor is an app that you can collect points from your
        geolocation. There are two different ways. In mode \'by distance\', capture new
        points from a minimum distance altered in latitude or longitude. In mode \'by
        time\', capture new points from a time stipulated by you. Once collected
        the points, you can determine your destination. In addition, the app is directly
        linked to Google Maps.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take a photo of the map</string>
    <string name="share_map_photo">Share a photo of the map</string>
    <string name="change_map_type">Change map type</string>
    <string name="choose_option">Choose an option:&#160;</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="distance">Distance (meters)</string>
    <string name="time">Time (seconds)</string>
    <string name="input_distance">Insert a distance:&#160;</string>
    <string name="input_time">Insert a time:&#160;</string>
    <string name="latitude_dots">Latitude:&#160;</string>
    <string name="longitude_dots">Longitude:&#160;</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="fill_blank_field">Fill the blank field</string>
    <string name="pause">Pause</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="saved_successfully">&#160;saved successfully</string>
    <string name="email_subject">Points Captor - Captured points</string>
    <string name="map_email_subject">Points Captor - Photo of the map</string>
    <string name="no_email_client">There is no email client installed</string>
    <string name="n">n</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="reboot">Reboot the app to apply the changes</string>
    <string name="warning">Warning</string>
    <string name="not_valid">&#160;is not a valid value</string>
    <string name="email_body">The file containing the captured points is attached to the email.</string>
    <string name="map_email_body">The photo of the map is attached to the email.</string>

    <string name="remove_repeated_points">Remove repeated points</string>
    <string name="removed_successfully">Points removed successfully</string>
    <string name="plus">Save new point</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_default_capture">Default Capture</string>
    <string name="nav_item_custom_capture">Custom Capture</string>
    <string name="nav_item_boundary_definition">Boundary Definition</string>
    <string name="nav_item_mesh_generation">Mesh Generation</string>
    <string name="nav_item_files_manager">Files Manager</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_default_capture</item>
        <item>@string/nav_item_custom_capture</item>
        <item>@string/nav_item_boundary_definition</item>
        <item>@string/nav_item_mesh_generation</item>
        <item>@string/nav_item_files_manager</item>
    </string-array>

    <string name="fragment_capture_type">CaptureTypeFragment</string>
    <string name="fragment_default_capture">DefaultCaptureFragment</string>
    <string name="fragment_custom_capture">CustomCaptureFragment</string>
    <string name="fragment_captured_points">CapturedPointsFragment</string>
    <string name="fragment_file_manager">FileManagerFragment</string>
    <string name="fragment_file_selection">FileSelectionFragment</string>
    <string name="fragment_boundary_definition">BoundaryDefinitionFragment</string>

    <string name="no_file_found">No file found</string>
    <string name="delete_file">Delete</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="data">Data</string>
    <string name="photos">Photos</string>
    <string name="image_display">Image Display</string>
    <string name="close">Close</string>

    <string name="imageview_description">Image Thumbnail</string>
    <string name="opengl_not_supported">OpenGL ES 2.0 not supported</string>
    <string name="fit">Fit</string>
    <string name="interpolate">Interpolate</string>
    <string name="refinement">Refinement</string>
    <string name="boundary_1">Boundary 1</string>
    <string name="boundary_2">Boundary 2</string>

    <string name="share_photo">Share</string>
    <string name="photo_email_subject">Points Captor - Photo</string>
    <string name="photo_email_body">The photo is attached to the email.</string>
    <string name="delete_photo">Delete</string>
    <string name="photo_deleted_successfully">Photo deleted successfully</string>
    <string name="photo">Photo</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="file">File</string>
    <string name="nav_drawer_item">Item</string>
</resources>
