<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.captor.points.gtnaozuka.pointscaptor.CustomCaptureActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txtPointsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/zero"
                android:textColor="@color/text_color"
                android:textSize="@android:dimen/app_icon_size" />

            <TextView
                android:id="@+id/txtPointsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/txtPointsNumber"
                android:layout_toRightOf="@+id/txtPointsNumber"
                android:text="@string/captured_points"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mapsButton"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_oval"
                android:contentDescription="@string/maps"
                android:onClick="startMapsActivity"
                android:src="@drawable/ic_action_map" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="150dip"
                android:layout_height="150dip"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_oval"
                android:contentDescription="@string/plus"
                android:onClick="saveNewPoint"
                android:padding="20dip"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_action_plus" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/btnStop"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_oval"
                android:contentDescription="@string/stop"
                android:onClick="stopRecord"
                android:src="@drawable/ic_action_stop" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/location"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/gpsButton"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_oval"
            android:contentDescription="@string/gps"
            android:onClick="turnGpsOn"
            android:src="@drawable/ic_action_gps" />

    </RelativeLayout>
</LinearLayout>